--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel='stylesheet' href='css/layouts/landscape.css'>
     <link rel='stylesheet' href='css/main.css'>
 
+    <!-- enables javascript to be used in specific files?  -->
     <script type='text/javascript' src='js/dom-of-thrones.js'></script>
     <script type='text/javascript' src='js/scene1.js'></script>
     <script type='text/javascript' src='js/scene3.js'></script>
-
+    <script type='text/javascript' src='js/scene2.js'></script>
   </head>
   <body>
 
